pop up box spacing per user request fixed. Text wrapped within chat container for large lines.

--- a/web-app/css/chat.css
+++ b/web-app/css/chat.css
@@ -96,7 +96,7 @@
 }
 .message-container > .message-north > .message-user-list  {
 	width: auto;
-	min-height: 25em;
+	min-height: 33%;
 	overflow: visible;
 }
 #fixoflow {
@@ -174,19 +174,21 @@
 
 .message-container > .message-north > .message-thread {
 	float: right;
-	width: 75%;
+	width: 77%;
 	min-height: 25em;
 	height: 90%;
-	white-space: pre;
-	padding-left: 5px;
-	padding-right: 0px;
 	background: #FFF;
+text-align: left;
+font-family: monospace;
+position: relative;
+display: inline-block;
 
-	overflow:auto;
-	
-	-webkit-box-sizing: border-box;
-	   -moz-box-sizing: border-box;
-	        box-sizing: border-box;
+
+border-style: solid;
+border-width: thin;
+border-color: #AAA;
+font-size: 1em;
+	word-wrap: break-word;
 	        
 	    
 }
@@ -341,3 +343,9 @@ float: right;
 .dropdown-submenu{float:none; }.dropdown-submenu>.dropdown-menu{right:-100%;margin-left:0px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
 .sidebar{float:right;margin-right:1px;}
 
+#chatMessages {
+	
+	white-space: normal;
+	position: absolute;
+	display: block;
+}
